Agrega archivos al archivo 'gitignore'

--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,8 @@ venv
 db.sqlite3
 
 # ** Archivos Cache :
-data_explorer_api/__pycache__
-users/__pycache__
-data/__pycache__
+__pycache__
 
 # ** Archivos Migrations :
 users/migrations
 data/migrations
-
-# ! Temp
-features.txt
