--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-tsparticles": "^2.12.2",
     "react-wavy-transitions": "^1.1.1",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
