--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+# Registros
 logs
 *.log
 npm-debug.log*
@@ -13,7 +13,7 @@ dist-ssr
 *.local
 
 
-# Editor directories and files
+# Editor, directorios y archivos
 .vscode/*
 !.vscode/extensions.json
 .idea
