--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,7 @@
 providers = ["node", "python"]
 
 [variables]
-NODE_ENV = 'production'
+NODE_ENV = 'productionl'
 
 [deploy]
 startCommand = "cd client && npm install && npm run build && cd .. && python manage.py migrate && python manage.py collectstatic --no-input && gunicorn data_explorer_api.wsgi"
